# lifegame

./: .gitignore  Cargo.toml  SPEC.md
frontend/: index.html
src/: api.rs  game.rs  main.rs
